--- a/index.html
+++ b/index.html
@@ -35,5 +35,38 @@
     </div>
 </body>
 <script type="module" defer src="./js/main.js"></script>
+<!-- Importa apenas um arquivo js, do tipo module -->
+<!-- O sistema de módulos no JavaScript, introduzido pelo ECMAScript 6 (também conhecido como ES6),
+fornece uma maneira de organizar e reutilizar código em aplicações JavaScript.
+ Os módulos ajudam a dividir um programa em partes mais gerenciáveis e promovem boas práticas de desenvolvimento, 
+ como encapsulamento e modularidade.
+
+Aqui estão alguns objetivos principais do sistema de módulos no JavaScript:
+
+1. **Encapsulamento:** Módulos permitem encapsular funcionalidades específicas em unidades independentes. 
+Cada módulo tem seu próprio escopo, ajudando a evitar poluição global de variáveis e conflitos de nome.
+
+2. **Reusabilidade:** Módulos podem ser reutilizados em diferentes partes de um aplicativo ou até mesmo em projetos diferentes.
+ Isso promove a reutilização de código, reduzindo a duplicação e facilitando a manutenção.
+
+3. **Organização do Código:** Módulos ajudam na organização do código fonte. Cada arquivo pode representar um módulo separado,
+ facilitando a navegação e a compreensão da estrutura do projeto.
+
+4. **Dependências Explícitas:** Módulos no JavaScript geralmente definem explicitamente suas dependências. 
+Isso facilita o entendimento das relações entre diferentes partes do código e ajuda na resolução de dependências de maneira mais controlada.
+
+5. **Carregamento Assíncrono:** O sistema de módulos permite o carregamento assíncrono de módulos, 
+o que é benéfico para o desempenho. Módulos são carregados sob demanda, reduzindo a carga inicial do aplicativo.
+
+6. **Escopo Próprio:** Cada módulo tem seu próprio escopo,
+ o que significa que variáveis e funções definidas em um módulo não são acessíveis diretamente de fora desse módulo, 
+ a menos que sejam explicitamente exportadas.
+
+7. **Facilidade de Manutenção:** A modularidade facilita a manutenção do código. 
+Pequenas alterações ou correções podem ser feitas em módulos individuais sem afetar o resto do aplicativo.
+
+Para implementar módulos em JavaScript, você pode usar a sintaxe `import` e `export`. 
+Os módulos podem ser arquivos separados ou até mesmo diretórios inteiros que contêm arquivos relacionados.
+ Essa abordagem modular ajuda a melhorar a qualidade do código e a escalabilidade das aplicações. -->
 
 </html>
